<resources>
    <string name="app_name">IndoBills</string>
    <string name="login_et_username">Username/ID:</string>
    <string name="login_et_password">Password:</string>
    <string name="login_btn">Login</string>
    <string name="login_btn_redirect">Have no account ? Register Now</string>
    <string name="register_tv_title">Register Now</string>
    <string name="register_et_handphone">Handphone:</string>
    <string name="register_et_confirm_pass">Confirm Password:</string>
    <string name="register_btn">Register</string>
    <string name="register_btn_redirect">Already have an account? Login now</string>
    <!--error-->
    <string name="error_passwordLength">Password must be at least 8 characters</string>
    <string name="error_password_alphaNumeric">Password must contain both letters and numbers</string>
    <string name="error_phone_numberDigits">Phone must be between 10 to 12 digits inclusively</string>
    <string name="error_phone">Phone must starts with 08</string>
    <string name="error_phone_mustBeNumber">Phone must be digits</string>
    <string name="error_confirm_password">Password and Confirm Password must be the same</string>
    <string name="error_username_space">Username must not have space</string>
    <string name="info_register_success">Registration Success</string>
    <string name="error_username_exist">Username exist</string>
    <string name="error_amount">Amount must be filled</string>
    <string name="error_payment_type">Choose payment via OVO or Gopay</string>
    <string name="error_bill_not_exist">Bill Not Exist</string>
    <!--fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_btm_transaction_list">Transaction List</string>
    <string name="nav_btm_logout">Log out</string>
    <string name="nav_btm_dummy">[NAV_MENU]</string>
    <string name="nav_upper_back">Back</string>
    <string name="bill_item_pay">[PAY BILLS]</string>
    <string name="bill_pay_wifi">Pay your Wifi</string>
    <string name="bill_pay_phone">Pay your Phone Bills</string>
    <string name="bill_pay_water">Pay your Water Bills</string>
    <string name="bill_detail_provider">[BILL] Provider:</string>
    <string name="bill_detail_number">[BILL] Number:</string>
    <string name="bill_detail_search">Search</string>
    <string name="bill_transaction_dummy_provider">[DUMMY_PROVIDER]</string>
    <string name="bill_transaction_dummy_number">[DUMMY_NUMBER]</string>
    <string name="bill_transaction_amount">Amount:</string>
    <string name="bill_transaction_via">Via:</string>
    <string name="bill_transaction_ovo">OVO</string>
    <string name="bill_transaction_gopay">Gopay</string>
    <string name="bill_transaction_submit">Submit</string>
    <string name="loading_transaction_wait">Please Wait...</string>
    <string name="loading_transaction_process">Your Transaction\'s still Being Processed</string>
    <string name="transaction_status_title">[TRANSACTION_STATUS]</string>
    <string name="transaction_status_msg">[TRANSACTION_MSG]</string>
    <string name="ts_success_detail"><u>Detail</u></string>
    <string name="ts_success_detail_name">[PROVIDER_NAME]</string>
    <string name="ts_success_detail_number">[PROVIDER_NUMBER]</string>
    <string name="ts_success_detail_amount">[PROVIDER_AMOUNT]</string>
    <string name="ts_success_detail_via">[PROVIDER_VIA]</string>
    <string name="ts_fail_cs">CS Contact</string>
    <string name="ts_fail_mobile">Mobile: +1 8764 324</string>
    <string name="ts_fail_location">Location: </string>
    <string name="transaction_detail_dummy_status">[DUMMY_STATUS]</string>
    <string name="transaction_card_code">[CODE]</string>
    <string name="transaction_list_title"><u>Transaction List</u></string>
    <string name="title_activity_maps">Map</string>
</resources>