<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionStatus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        >

        <TextView
            android:id="@+id/tv_transaction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/transaction_status_title"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_transaction_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:text="@string/transaction_status_msg"
            android:textStyle="bold"
            android:gravity="center"
            />

        <LinearLayout
            android:id="@+id/ll_transaction_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:text="@string/ts_success_detail"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_name"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_number"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_amount"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_via"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_via"
                android:layout_marginBottom="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_transaction_fail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:text="@string/ts_fail_cs"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_fail_mobile"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_fail_location"
                android:layout_marginBottom="18dp"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>