<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="65sp"
        android:textAlignment="center"
        />
    
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_et_username"
            android:textSize="26sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_et_password"
            android:textSize="26sp"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_border"
            android:inputType="textPassword"
            android:padding="10dp"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="40dp"
        />

    <Button
        android:id="@+id/btn_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_redirect"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/btn_borderless"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />


</LinearLayout>