<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_top"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/fragment_nav_top"
        android:layout_above="@+id/fragment_nav_bottom"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="40dp"
        android:paddingHorizontal="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_list_title"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            />

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/transaction_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/yellow"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_transaction_card"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_wifi_24"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="40dp"
                    />

                <TextView
                    android:id="@+id/tv_transaction_card_detail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="@string/transaction_card_code"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bill_transaction_shape"
            android:padding="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/ts_success_detail"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_name"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_number"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_amount"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_detail_via"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/ts_success_detail_via"
                android:layout_marginBottom="18dp"
                />

            <TextView
                android:id="@+id/tv_transaction_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/transaction_detail_dummy_status"
                android:textStyle="bold"
                />

        </LinearLayout>

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_bottom"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>