<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_top"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/fragment_nav_bottom"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_bill_item"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp"
                android:paddingHorizontal="25dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bill_transaction_shape"
                >

                <TextView
                    android:id="@+id/tv_provider_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_transaction_dummy_provider"
                    />

                <TextView
                    android:id="@+id/tv_provider_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_transaction_dummy_number"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_transaction_amount"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/et_bill_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bill_transaction_via"
                    android:layout_marginRight="30dp"
                    />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_payment_ovo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_transaction_ovo"
                        android:background="@color/purple"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="40dp"
                        android:textSize="20sp"
                        android:layout_marginRight="50dp"
                        />

                    <TextView
                        android:id="@+id/tv_oayment_gopay"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bill_transaction_gopay"
                        android:background="@color/green"
                        android:paddingVertical="10dp"
                        android:paddingHorizontal="20dp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_alignParentRight="true"
                        />
                </LinearLayout>



            </LinearLayout>

            <Button
                android:id="@+id/btn_submit_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_transaction_submit"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="40dp"
                android:layout_gravity="center"
                />


        </LinearLayout>


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_bottom"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>