<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_tv_title"
                android:textSize="50sp"
                android:textAlignment="center"
                />

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_et_username"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/et_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_et_password"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_et_handphone"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/et_register_handphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register_et_confirm_pass"
                    android:textSize="22sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/et_register_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_border"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_btn"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:paddingHorizontal="40dp"
                />

            <Button
                android:id="@+id/btn_register_redirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_btn_redirect"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:background="@drawable/btn_borderless"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </ScrollView>


</LinearLayout>