<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_top"
        android:layout_alignParentTop="true"
        />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/fragment_nav_bottom"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fragment_bill_item"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            >

            <TextView
                android:id="@+id/tv_provider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_detail_provider"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/et_provider_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                />
            <TextView
                android:id="@+id/tv_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bill_detail_number"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/et_provider_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_detail_search"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="40dp"
                android:layout_gravity="center"
                />


        </LinearLayout>


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_nav_bottom"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>